# electron_updater

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: lint.yml  tag-build.yml
src/: lib.rs  main.rs  ui.rs
src/logging/: debug.rs  mod.rs
src/mlog/: log_debug.rs
src/ui/: logic.rs  mod.rs  view.rs  widgets.rs
src/update/: callbacks.rs  mod.rs  ops.rs  runner.rs  state.rs  sysinfo.rs  task.rs
