[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["druid", "debug"]
debug = ["fern", "log", "chrono"]


[dependencies]
serde_json = "1.0.149"
serde = "1.0.228"
serde_derive = "1.0.228"
sysinfo = "0.38.0"
druid = { version = "0.8.3", optional = true }
fern = { version = "0.7.1", features = ["date-based", "colored"], optional = true }
log = { version = "0.4.29", optional = true }
chrono = { version = "0.4.43", optional = true }

